<resources>
    <string name="app_name">WebApi Call Example</string>

    <string name="name">Nome: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <string name="locality">Locality: </string>
    <string name="number">Number: </string>
    <string name="description">Description: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
